<resources>
    <string name="app_name">COVID19 Tracker</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>
    <string name="state_ut">STATE/UT</string>
    <string name="cnfmd">CNFMD</string>
    <string name="actv">ACTV</string>
    <string name="rcvrd">RCVRD</string>
    <string name="dcsd">DCSD</string>
</resources>