<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:padding="8dp"
        android:text="@string/state_ut"
        android:layout_weight="3.1"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        tools:ignore="Suspicious0dp" />

    <TextView
        android:textAlignment="viewEnd"
        android:padding="8dp"
        android:textColor="@color/dark_red"
        android:text="@string/cnfmd"
        android:layout_weight="2.2"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <TextView
        android:textAlignment="viewEnd"
        android:padding="8dp"
        android:text="@string/actv"
        android:layout_weight="1.8"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:layout_height="wrap_content"
        tools:ignore="Suspicious0dp" />

    <TextView
        android:textAlignment="viewEnd"
        android:padding="8dp"
        android:text="@string/rcvrd"
        android:layout_weight="2.3"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textColor="@color/dark_green"
        android:layout_height="wrap_content"
        tools:ignore="Suspicious0dp" />

    <TextView
        android:textAlignment="viewEnd"
        android:padding="8dp"
        android:text="@string/dcsd"
        android:layout_weight="1.6"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:textColor="@color/dark_yellow"
        android:layout_height="wrap_content"
        tools:ignore="Suspicious0dp" />

</LinearLayout>