<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTv"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="India Covid-19 \nTracker"/>

    <TextView
        android:id="@+id/lastUpdatedTv"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="Last Updated"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/dark_green"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/container"
        android:layout_marginTop="16dp"
        android:layout_below="@id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/dark_red"
                android:text="@string/confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_virus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="@color/dark_red" />

            <TextView
                android:id="@+id/confirmedTv"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="7062"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/dark_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:text="@string/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_patient"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="@color/dark_blue" />

            <TextView
                android:id="@+id/activeTv"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="7062"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/dark_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/dark_green"
                android:text="@string/recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_heart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="@color/dark_green" />

            <TextView
                android:id="@+id/recoveredTv"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="7062"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/dark_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/dark_yellow"
                android:text="@string/deceased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_death"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="@color/dark_yellow" />

            <TextView
                android:id="@+id/deceasedTv"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="7062"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/dark_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>